# AMATRA

./: .gitignore  .gitmodules  AGENTS.md  JOURNAL.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  scheduled-smoke.yml
app/: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
app/src/amatra_app/: BubbleSegmenter.py  MangaOCRModel.py  MangaTypesetter.py  _amatra_bootstrap.py  main.py
code/bubble-detection/YOLO_Ultralytics/: YOLOv8s.ipynb  yolo_helper.py
code/bubble-ocr/manga-ocr/: manga-ocr-test.ipynb
code/pipeline/Pipelines/: pipeline4.ipynb
code/pipeline/Utils/: BubbleSegmenter.py  MangaPipeline.py  MangaTypesetter.py
docs/: INTEGRATION.md  agent-workflows.md  feature-map.md
environments/: get_model_pth_file.py  set_up.sh  set_up_dataset.sh
src/amatra/: __init__.py  cli.py
src/amatra/config/: __init__.py  translator_presets.v1.json
src/amatra/fixtures/: __init__.py
src/amatra/runtime/: __init__.py  config.py  fixtures.py  headless.py  mock.py  runs.py
src/amatra/tools/: check_dependencies.py
src/amatra/translation/: __init__.py  base.py  errors.py  factory.py  registry.py  types.py
src/archive/: fix_missing_file_name.ipynb  fix_missing_file_name_new.ipynb
src/bubble-detection/DEEPLABv3/: deeplab-v3-resnet50-test.ipynb  deeplab-v3-resnet50-train.ipynb
src/bubble-detection/UNET/: u-net-test.ipynb  u-net-train.ipynb
src/bubble-detection/YOLO_Ultralytics/: YOLOv11n.ipynb  YOLOv11s.ipynb  YOLOv8n.ipynb  set_up_yolo_dataset.ipynb
src/bubble-detection/detectron2/: detectron2-v3-test.ipynb  detectron2-v3-train.ipynb
src/bubble-translation/page-level/: MangaDialougeDatasetCreator.py  local_finetune.ipynb  local_full_finetune.ipynb  pretrain-data-contruct.py  train-data-construct.ipynb
src/pipeline/: BaseModel.py
src/pipeline/Evaluators/: Evaluator.py
src/pipeline/OCRModels/: BaseOCRModel.py  MangaOCRModel.py
src/pipeline/Pipelines/: pipeline1.ipynb  pipeline2.ipynb  (+4 more)
src/utils/: link_segment_to_text.py  rle_to_polygons.py  train_test_split_manga109.csv  visualise-open-mantra.py
tests/: test_cli_and_fixtures.py  test_translation_boundary.py
(+60 files in other folders)
